Fixed Overflow when quota is over 100% Added Stripes to Blocked Element

--- a/apps/files/css/files.scss
+++ b/apps/files/css/files.scss
@@ -805,7 +805,16 @@ table.dragshadow td.size {
   }
   .progress-blocked {
     @extend .progress-states;
-    background-color: darkgrey;
+    $color-stripe-light: #b8b8b8;
+    $color-stripe-dark: #767676;
+    background-image: linear-gradient(
+                    121deg,
+                    $color-stripe-dark 32.65%,
+                    $color-stripe-light 32.65%,
+                    $color-stripe-light 60%,
+                    $color-stripe-dark 60%
+    );
+    background-size: 23px 30px;
   }
 }
 
